argocd-apps-rd/elastic-system-hsts-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: elastic-hsts-middleware
  namespace: elastic-system
spec:
  redirectScheme:
    permanent: true
    scheme: https
