argocd-apps-rd/traefik-auth-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-auth-middleware
  namespace: kube-system
spec:
  basicAuth:
    secret: traefik-auth
